# deploy-service

./: .gitignore  README.md  manifest.multi-stdio.yaml  pyproject.toml
multi-stdio/: Dockerfile  config.json.template  entrypoint.sh
src/deploy_service/: __init__.py  cli.py  client.py  deploy.py
